<resources>
    <string name="app_name">우리들의 이야기</string>
    <string name="action_settings">설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- 날짜 -->
    <string name="format_date">y년 M월 d일</string>
    <string name="day">일전</string>
    <string name="hour">시간전</string>
    <string name="minute">분전</string>
    <string name="second">초전</string>
    <string name="afew">지금</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lounge_fragment">라운지</string>
    <string name="group_fragment">그룹</string>
    <string name="friend_fragment">친구</string>
    <string name="chat_fragment">채팅 목록</string>
    <string name="logout">로그아웃</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 탭 이름 -->
    <string-array name="tab_name">
        <item>소식</item>
        <item>앨범</item>
        <item>맴버</item>
        <item>설정</item>
    </string-array>
    <string-array name="tab_myinfo">
        <item>내 정보</item>
        <item>내가 쓴 글</item>
    </string-array>

    <string name="title_find">그룹찾기</string>
    <string name="title_request">가입신청중 그룹</string>
    <string name="title_create">그룹 만들기</string>

    <!-- 메뉴 -->
    <string name="create">생성</string>
    <string name="send">전송</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="report">게시물 신고</string>
    <string name="block">사용자 신고</string>
    <string name="chat">채팅방</string>
    <string name="attach">첨부</string>
    <string name="save">저장</string>
    <string name="search">검색</string>

    <!-- 콘텍스트메뉴 -->
    <string name="context_profile_change_title">프로필 이미지 변경</string>
    <string name="context_image_title">이미지 선택</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="non_image">기본 이미지</string>
    <string name="context_video_title">동영상 선택</string>
    <string name="youtube">유튜브</string>

    <!-- Post 아이템 -->
    <string name="more">...더보기</string>
    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="reported_message">사용자에 의해 신고된 게시글 입니다.</string>

    <!-- Loading 아이템 -->
    <string name="loading">불러오는중…</string>
    <string name="retry">재시도</string>

    <!-- 회원가입, 로그인 화면 -->
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="confirm_password">패스워드 확인</string>
    <string name="welcome">환영합니다</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="login_phrases">임시</string>
    <string name="invalid_name">이름을 입력해주세요.</string>
    <string name="invalid_email">이메일 형식이 잘못되었습니다.</string>
    <string name="invalid_password">패스워드는 5자 이상 입력해야합니다.</string>
    <string name="invalid_password_check">패스워드가 일치하지 않습니다.</string>
    <string name="login_input_correct">이메일 또는 비밀번호가 잘못되었습니다.</string>
    <string name="register_complete">회원가입 완료</string>

    <!-- 그룹 화면 -->
    <string name="joined_group">가입중인 그룹</string>

    <!-- 그룹 정보 화면 -->
    <string name="group_title">그룹 이름</string>
    <string name="group_description">그룹 설명</string>
    <string name="group_info">그룹 정보</string>

    <!-- 그룹 만들기 화면 -->
    <string name="input_group_title">그룹이름 입력</string>
    <string name="input_group_description">그룹 설명을 입력하세요.</string>
    <string name="join_type">가입 방식</string>
    <string name="auto_approved">자동 승인</string>
    <string name="confirm_approval">승인 확인</string>
    <string name="group_created">그룹이 생성되었습니다.</string>
    <string name="require_group_title">그룹명을 입력하세요.</string>
    <string name="require_group_description">그룹설명을 입력해주세요.</string>

    <!-- 상세 화면 -->
    <string name="input_comment">댓글을 입력하세요.</string>
    <string name="select_action">작업 선택</string>
    <string name="copy_content">내용 복사</string>
    <string name="edit_comment">댓글 수정</string>
    <string name="delete_comment">댓글 삭제</string>
    <string name="send_complete">전송 완료</string>
    <string name="delete_complete">삭제 완료</string>
    <string name="delete_title">게시글 삭제</string>
    <string name="delete_message">게시글을 삭제하시겠습니까?</string>
    <string name="report_title">신고 하기</string>
    <string name="report_message">해당 게시글을 신고하시겠습니까?</string>
    <string name="reported_post">신고 처리된 게시글입니다.</string>
    <string name="block_title">사용자 신고 하기</string>
    <string name="block_message">해당 사용자를 신고하시겠습니까?</string>

    <!-- 채팅 화면 -->
    <string name="input_message">메시지를 입력하세요.</string>

    <!-- 쓰기 화면 -->
    <string name="input_content">내용을 입력하세요.</string>
    <string name="sending">전송중..</string>

    <!-- 설정 화면 -->
    <string name="user_settings">사용자 설정</string>
    <string name="group_settings">그룹 설정</string>
    <string name="leave_group">그룹 탈퇴</string>
    <string name="delete_group">그룹 폐쇄</string>
    <string name="question_leave_group">탈퇴 하시겠습니까?</string>
    <string name="question_delete_group">폐쇄 하시겠습니까?</string>
    <string name="application_info">어플리케이션 정보</string>
    <string name="notice">공지사항</string>
    <string name="feedback">개발자에게 의견보내기</string>
    <string name="appstore">평점주기</string>
    <string name="share">공유하기</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="verinfo">버전 정보</string>

    <!-- 게시글 화면 -->
    <string name="add_message">등록된 글이 없습니다.\n게시글을 작성하세요."</string>
    <string name="no_request_join">가입 신청한 그룹이 없습니다.</string>
    <string name="no_group">그룹이 없습니다.</string>

    <!-- 가입 신청 화면 -->
    <string name="request_join">가입 신청</string>
    <string name="request_cancel">신청 취소</string>

    <!-- 내 정보 수정 화면 -->
    <string name="update_complete">수정되었습니다.</string>

    <!-- 멤버 화면 -->
    <string name="add_friend">친구추가</string>
    <string name="remove_friend">친구삭제</string>

    <!-- 친구 화면 -->
    <string name="query_hint">검색어를 입력하세요.</string>

    <!-- 네트워크 상태 확인 -->
    <string name="connection_error_title">연결 오류</string>
    <string name="connection_error_message">콘텐츠를 가져올 수 없습니다.\n인터넷 연결을 확인하고 다시 시도하세요.</string>
    <string name="connection_error_negative_button">앱 종료</string>
    <string name="connection_error_positive_button">새로고침</string>
</resources>
