<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showln="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/loungeFragment"
            android:icon="@drawable/ic_baseline_chat_bubble_24"
            android:title="@string/lounge_fragment"/>

        <item
            android:id="@+id/groupFragment"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/group_fragment"/>

        <item
            android:id="@+id/friendFragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/friend_fragment"/>

        <item
            android:id="@+id/chatFragment"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/chat_fragment"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout"/>
    </group>

</menu>
