<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.CreateGroupFragment">

    <data>
        <variable
                name="viewModel"
                type="com.hhp227.application.viewmodel.CreateGroupViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                    android:id="@+id/ll_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    app:layout_constraintTop_toTopOf="parent">

                <EditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/input_group_title"
                        android:inputType="textNoSuggestions"
                        android:paddingStart="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@={viewModel.state.title}"
                        app:error="@{viewModel.state.titleError}">
                    <requestFocus/>
                </EditText>
                <ImageView
                        android:id="@+id/iv_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:padding="5dp"
                        android:src="@{viewModel.state.title.empty ? @drawable/ic_clear_gray_24dp : @drawable/ic_clear_black_24dp}"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:onClick="@{() -> viewModel.onResetClick()}"
                        tools:src="@drawable/ic_clear_gray_24dp"/>

            </LinearLayout>

            <ImageView
                    android:id="@+id/iv_group_image"
                    android:layout_width="match_parent"
                    android:layout_height="275dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    app:imageFromUrl="@{viewModel.state.bitmap != null ? viewModel.state.bitmap : @drawable/add_photo}"
                    app:layout_constraintTop_toBottomOf="@id/ll_title"
                    tools:src="@drawable/add_photo"/>

            <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:gravity="top"
                    android:background="@null"
                    android:hint="@string/input_group_description"
                    android:divider="@null"
                    android:text="@={viewModel.state.description}"
                    app:layout_constraintTop_toBottomOf="@id/iv_group_image"
                    app:error="@{viewModel.state.descError}" />

            <RadioGroup
                    android:id="@+id/rg_join_type"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:onCheckedChanged="@{(rg, resId) -> viewModel.setJoinType(resId != @id/rb_auto)}"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/join_type">

                </TextView>

                <RadioButton
                        android:layout_weight="2"
                        android:text="@string/auto_approved"
                        android:id="@+id/rb_auto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                <RadioButton
                        android:layout_weight="2"
                        android:text="@string/confirm_approval"
                        android:id="@+id/rb_check"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>